--- a/index.html
+++ b/index.html
@@ -47,14 +47,17 @@ Author URL: http://w3layouts.com
 							<a class="nav-link" href="about.html">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="services.html">Causes</a>
+							<a class="nav-link" href="services.html">Services</a>
 						</li>
-						
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html"></a>
+						</li>
 						<li class="nav-item ml-lg-4">
-							<a class="nav-link donate btn btn-style" href="donate.html">Donate</a>
+							<a class="nav-link donate btn btn-style" href="donate.html">Sign up</a>
 						</li>
 					</ul>
 				</div>
@@ -72,14 +75,14 @@ Author URL: http://w3layouts.com
 							<div class="banner-info">
 								<div class="container">
 									<div class="banner-info-bg">
-										<h5>Actions speak louder than words! Give today.</h5>
+										<h5>Looking for a caregiver or a Nanny?</h5>
 										<div class="banner-buttons">
-											<a class="btn btn-style btn-primary" href="services.html">Volunteer</a>
+											<!-- <a class="btn btn-style btn-primary" href="services.html">Volunteer</a> -->
 											<a href="#small-dialog" class="popup-with-zoom-anim play-view">
-												<span class="video-play-icon">
+												<!-- <span class="video-play-icon">
 													<span class="fa fa-play"></span>
-												</span>
-												<h6>How We Works</h6>
+												</span> -->
+												<!-- <h6>How We Works</h6> -->
 											</a>
 											<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
 											<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
@@ -99,14 +102,14 @@ Author URL: http://w3layouts.com
 							<div class="banner-info">
 								<div class="container">
 									<div class="banner-info-bg">
-										<h5>Creative a Better Future through your Help</h5>
+										<h5 >A database of nannies and caregivers at a simple sign up</h5>
 										<div class="banner-buttons">
-											<a class="btn btn-style btn-primary" href="services.html">Volunteer</a>
+											<!-- <a class="btn btn-style btn-primary" href="services.html">Volunteer</a> -->
 											<a href="#small-dialog" class="popup-with-zoom-anim play-view">
-												<span class="video-play-icon">
+												<!-- <span class="video-play-icon">
 													<span class="fa fa-play"></span>
 												</span>
-												<h6>How We Works</h6>
+												<h6>How We Works</h6> -->
 											</a>
 											<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
 											<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
@@ -126,14 +129,14 @@ Author URL: http://w3layouts.com
 							<div class="banner-info">
 								<div class="container">
 									<div class="banner-info-bg">
-										<h5>Actions speak louder than words! Give today.</h5>
+										<h5>Daily service personalised for each client.</h5>
 										<div class="banner-buttons">
-											<a class="btn btn-style btn-primary" href="services.html">Volunteer</a>
+											<!-- <a class="btn btn-style btn-primary" href="services.html">Volunteer</a> -->
 											<a href="#small-dialog1" class="popup-with-zoom-anim play-view">
-												<span class="video-play-icon">
+												<!-- <span class="video-play-icon">
 													<span class="fa fa-play"></span>
 												</span>
-												<h6>How We Works</h6>
+												<h6>How We Works</h6> -->
 											</a>
 											<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
 											<div id="small-dialog1" class="zoom-anim-dialog mfp-hide">
@@ -153,14 +156,14 @@ Author URL: http://w3layouts.com
 							<div class="banner-info">
 								<div class="container">
 									<div class="banner-info-bg">
-										<h5>Creative a Better Future through your Help</h5>
+										<h5>Sign up to train with us</h5>
 										<div class="banner-buttons">
-											<a class="btn btn-style btn-primary" href="services.html">Volunteer</a>
+											<!-- <a class="btn btn-style btn-primary" href="services.html">Volunteer</a> -->
 											<a href="#small-dialog2" class="popup-with-zoom-anim play-view">
-												<span class="video-play-icon">
+												<!-- <span class="video-play-icon">
 													<span class="fa fa-play"></span>
 												</span>
-												<h6>How We Works</h6>
+												<h6>How We Works</h6> -->
 
 											</a>
 											<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
@@ -185,12 +188,12 @@ Author URL: http://w3layouts.com
 			<div class="bottomhny-grids-sec">
 				<div class="bottomhny-1">
 					<div class="bottomhny-gd-ingf">
-						<h4>Charity is a simple method to prove kindness</h4>
+						<h4>Services customised to meet your needs 24/7</h4>
 					</div>
 				</div>
 				<div class="bottomhny-1 bottomhny-2">
 					<div class="bottomhny-gd-ingf">
-						<h4>By giving a little, you will help out a lot.</h4>
+						<h4>Complete background screening of our caregivers</h4>
 					</div>
 				</div>
 				<div class="bottomhny-1 bottomhny-1-img">
@@ -209,9 +212,10 @@ Author URL: http://w3layouts.com
 		<div class="features4-block py-5">
 			<div class="container py-lg-4">
 				<div class="title-content text-center mb-lg-5 mt-4">
-					<h6 class="sub-title">Why Choose Us</h6>
-					<h3 class="hny-title">How Can Help?</h3>
-					<p class="fea-para">Lorem illum facere aperiam consectetur adipisicing elit</p>
+					<h6 class="sub-title">Welcome to </h6>
+					<h3 class="hny-title">Jane Doe</h3>
+					<p class="fea-para">Our services include providing, recruiting and training   adult care givers, nanny services, 24-hour care, and respite care<br>
+						We find capable extra hands to help you with your childcare and homecare requirements. Our services are tailored to your needs based on your choices.</p>
 				</div>
 				<div class="row features4-grids text-left mt-lg-4">
 					<div class="col-lg-3 col-md-6 features4-grid mt-4">
@@ -221,16 +225,16 @@ Author URL: http://w3layouts.com
 									<div class="ch-info-wrap">
 										<div class="ch-info">
 											<div class="ch-info-front ch-img-1"></div>
-											<div class="ch-info-back">
+											<!-- <div class="ch-info-back">
 												<h4>Donate</h4>
-											</div>
+											</div> -->
 										</div>
 									</div>
 								</div>
 							</div>
 
 							<div class="features4-rightinfo">
-								<h5><a href="#URL">Give Donation</a></h5>
+								<h5><a href="#URL">Adult Care</a></h5>
 								<p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere.</p>
 
 							</div>
@@ -243,16 +247,15 @@ Author URL: http://w3layouts.com
 									<div class="ch-info-wrap">
 										<div class="ch-info">
 											<div class="ch-info-front ch-img-2"></div>
-											<div class="ch-info-back">
+											<!-- <div class="ch-info-back">
 												<h4>Donate</h4>
-											</div>
+											</div> -->
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="features4-rightinfo">
-								<h5><a href="#URL">
-										Become A Volunteer</a></h5>
+								<h5><a href="#URL">Nanny Services</a></h5>
 								<p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere.</p>
 
 							</div>
@@ -265,16 +268,16 @@ Author URL: http://w3layouts.com
 									<div class="ch-info-wrap">
 										<div class="ch-info">
 											<div class="ch-info-front ch-img-3"></div>
-											<div class="ch-info-back">
+											<!-- <div class="ch-info-back">
 												<h4>Donate</h4>
-											</div>
+											</div> -->
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="features4-rightinfo">
 								<h5><a href="#URL">
-										Adopt A Child</a></h5>
+										House Keepers</a></h5>
 								<p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere.</p>
 
 							</div>
@@ -287,16 +290,16 @@ Author URL: http://w3layouts.com
 									<div class="ch-info-wrap">
 										<div class="ch-info">
 											<div class="ch-info-front ch-img-4"></div>
-											<div class="ch-info-back">
+											<!-- <div class="ch-info-back">
 												<h4>Donate</h4>
-											</div>
+											</div> -->
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="features4-rightinfo">
 								<h5><a href="#URL">
-										Help For Education</a></h5>
+										Sign up to train with us</a></h5>
 								<p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere.</p>
 
 							</div>
@@ -310,7 +313,7 @@ Author URL: http://w3layouts.com
 	<!--//features-4 -->
 
 	<!-- /specification-6-->
-	<section class="w3l-specification-6">
+	<!-- <section class="w3l-specification-6">
 		<div class="specification-6-mian py-5">
 			<div class="container py-lg-5">
 				<div class="row story-6-grids">
@@ -369,7 +372,7 @@ Author URL: http://w3layouts.com
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- //specification-6-->
 	<!--/blog-grids-home-->
 	<section class="bloghny-gds py-5">
@@ -488,12 +491,12 @@ Author URL: http://w3layouts.com
 			<div class="welcome-left text-center py-3">
 				<div class="title-content">
 					<h6 class="sub-title">Join Us</h6>
-					<h3 class="hny-title two">Become A Volunteer</h3>
-					<p>Join your hand with us for a better life and beautiful future</p>
+					<h3 class="hny-title two">Want to be part of our workforce?</h3>
+					<p>With simple a simple sign up, you can join and train to be part of our team of caregivers</p>
 
 				</div>
-				<a href="donate.html" class="btn btn-style transparent-btn mt-4 mr-sm-2">Donate Now</a>
-				<a href="contact.html" class="btn btn-style btn-primary mt-4">Contact Us</a>
+				<!-- <a href="donate.html" class="btn btn-style transparent-btn mt-4 mr-sm-2">Donate Now</a> -->
+				<a href="contact.html" class="btn btn-style btn-primary mt-4">Sign up</a>
 			</div>
 		</div>
 	</div>
@@ -604,9 +607,7 @@ Author URL: http://w3layouts.com
 										<a class="navbar-brand" href="#index.html">
 											<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 										</a> -->
-									<p class="pr-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Consequuntur hic odio voluptatem tenetur consequatur.Lorem ipsum dolor sit amet
-										consectetur adipisicing elit. </p>
+									<p class="pr-lg-4">Follow our social-media pages for more updates </p>
 									<div class="columns-2">
 										<ul class="social">
 											<li><a href="#facebook"><span class="fa fa-facebook"
@@ -621,9 +622,9 @@ Author URL: http://w3layouts.com
 											<li><a href="#google"><span class="fa fa-google-plus"
 														aria-hidden="true"></span></a>
 											</li>
-											<li><a href="#github"><span class="fa fa-github"
+											<!-- <li><a href="#github"><span class="fa fa-github"
 														aria-hidden="true"></span></a>
-											</li>
+											</li> -->
 										</ul>
 									</div>
 								</div>
@@ -632,21 +633,20 @@ Author URL: http://w3layouts.com
 									<div class="mid-footer-gd sub-two-right">
 
 										<ul>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Water
-													Surve</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Nanny Services
+												</a>
 											</li>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Education
-													for
-													all</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Adult Care
+													</a>
 											</li>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Food
-													Serving</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>House Keepers
+													</a>
 											</li>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Animal
-													Saves</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Training
+													</a>
 											</li>
 										</ul>
-										<ul>
+										<!-- <ul>
 											<li><a href="#"><span
 														class="fa fa-angle-double-right mr-2"></span>Sponsors</a>
 											</li>
@@ -659,7 +659,7 @@ Author URL: http://w3layouts.com
 											<li><a href="#terms"><span class="fa fa-angle-double-right mr-2"></span>Our
 													Organization</a>
 											</li>
-										</ul>
+										</ul> -->
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6 sub-one-left">
@@ -688,8 +688,7 @@ Author URL: http://w3layouts.com
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 LivSaverz. All rights reserved | Designed by <a
-									href="https://w3layouts.com">W3layouts</a></p>
+							<p>© 2020 LivSaverz. All rights reserved </p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
