--- a/about.html
+++ b/about.html
@@ -42,21 +42,24 @@ Author URL: http://w3layouts.com
 
 				<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
+						<li class="nav-item active">
 							<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="services.html">Causes</a>
+							<a class="nav-link" href="services.html">Services</a>
 						</li>
-						
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html"></a>
+						</li>
 						<li class="nav-item ml-lg-4">
-							<a class="nav-link donate btn btn-style" href="donate.html">Donate</a>
+							<a class="nav-link donate btn btn-style" href="donate.html">Sign up</a>
 						</li>
 					</ul>
 				</div>
@@ -165,7 +168,7 @@ Author URL: http://w3layouts.com
 						</div>
 						<h4>Tackling Poverty</h4>
 						<p>Lorem illum facere aperiam sequi optio consectetur adipisicing elitFuga, suscipit totam animi consequatur saepe blanditiis</p>
-						<a href="services.html" class="btn btn-style btn-primary mt-3">Read More</a>
+						<!-- <a href="services.html" class="btn btn-style btn-primary mt-3">Read More</a> -->
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 content-5-one">
@@ -175,7 +178,7 @@ Author URL: http://w3layouts.com
 						</div>
 						<h4>Make Big Impact</h4>
 						<p>Lorem illum facere aperiam sequi optio consectetur adipisicing elitFuga, suscipit totam animi consequatur saepe blanditiis</p>
-						<a href="services.html" class="btn btn-style btn-primary mt-3">Read More</a>
+						<!-- <a href="services.html" class="btn btn-style btn-primary mt-3">Read More</a> -->
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 content-5-one">
@@ -185,7 +188,7 @@ Author URL: http://w3layouts.com
 						</div>
 						<h4>Unite The Society</h4>
 						<p>Lorem illum facere aperiam sequi optio consectetur adipisicing elitFuga, suscipit totam animi consequatur saepe blanditiis</p>
-						<a href="services.html" class="btn btn-style btn-primary mt-3">Read More</a>
+						<!-- <a href="services.html" class="btn btn-style btn-primary mt-3">Read More</a> -->
 					</div>
 				</div>
 
@@ -314,9 +317,7 @@ Author URL: http://w3layouts.com
 										<a class="navbar-brand" href="#index.html">
 											<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 										</a> -->
-									<p class="pr-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Consequuntur hic odio voluptatem tenetur consequatur.Lorem ipsum dolor sit amet
-										consectetur adipisicing elit. </p>
+									<p class="pr-lg-4">Follow our social-media pages for more updates </p>
 									<div class="columns-2">
 										<ul class="social">
 											<li><a href="#facebook"><span class="fa fa-facebook"
@@ -331,9 +332,9 @@ Author URL: http://w3layouts.com
 											<li><a href="#google"><span class="fa fa-google-plus"
 														aria-hidden="true"></span></a>
 											</li>
-											<li><a href="#github"><span class="fa fa-github"
+											<!-- <li><a href="#github"><span class="fa fa-github"
 														aria-hidden="true"></span></a>
-											</li>
+											</li> -->
 										</ul>
 									</div>
 								</div>
@@ -342,21 +343,20 @@ Author URL: http://w3layouts.com
 									<div class="mid-footer-gd sub-two-right">
 
 										<ul>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Water
-													Surve</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Nanny Services
+												</a>
 											</li>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Education
-													for
-													all</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Adult Care
+													</a>
 											</li>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Food
-													Serving</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>House Keepers
+													</a>
 											</li>
-											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Animal
-													Saves</a>
+											<li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Training
+													</a>
 											</li>
 										</ul>
-										<ul>
+										<!-- <ul>
 											<li><a href="#"><span
 														class="fa fa-angle-double-right mr-2"></span>Sponsors</a>
 											</li>
@@ -369,8 +369,9 @@ Author URL: http://w3layouts.com
 											<li><a href="#terms"><span class="fa fa-angle-double-right mr-2"></span>Our
 													Organization</a>
 											</li>
-										</ul>
+										</ul> -->
 									</div>
+		
 								</div>
 								<div class="col-lg-4 col-md-6 sub-one-left">
 									<h6>Happy Faces</h6>
@@ -398,8 +399,7 @@ Author URL: http://w3layouts.com
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 LivSaverz. All rights reserved | Designed by <a
-									href="https://w3layouts.com">W3layouts</a></p>
+							<p>© 2020 LivSaverz. All rights reserved</p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
