added signup doc

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Author URL: http://w3layouts.com
 							<a class="nav-link" href="contact.html"></a>
 						</li>
 						<li class="nav-item ml-lg-4">
-							<a class="nav-link donate btn btn-style" href="donate.html">Sign up</a>
+							<a class="nav-link donate btn btn-style" href="sign.html">Sign up</a>
 						</li>
 					</ul>
 				</div>
