--- a/services.html
+++ b/services.html
@@ -256,7 +256,7 @@ Author URL: http://w3layouts.com
 							<a class="nav-link" href="contact.html"></a>
 						</li>
 						<li class="nav-item ml-lg-4">
-							<a class="nav-link donate btn btn-style" href="signForm.html">Sign up</a>
+							<a class="nav-link donate btn btn-style" href="sign.html">Sign up</a>
 						</li>
 					</ul>
 				</div>
