--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ Author URL: http://w3layouts.com
 
 				</div>
 				<!-- <a href="donate.html" class="btn btn-style transparent-btn mt-4 mr-sm-2">Donate Now</a> -->
-				<a href="contact.html" class="btn btn-style btn-primary mt-4">Sign up</a>
+				<a href="sign.html" class="btn btn-style btn-primary mt-4">Sign up</a>
 			</div>
 		</div>
 	</div>
