--- a/services.html
+++ b/services.html
@@ -222,13 +222,13 @@ Author URL: http://w3layouts.com
 	<header id="site-header" class="fixed-top">
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-dark stroke">
-				<h1> <a class="navbar-brand" href="index.html">
+				<!-- <h1> <a class="navbar-brand" href="index.html">
 						<span class="fa fa-heart"></span> <span class="sub-logo">Liv</span>Saverz
-					</a></h1>
-				<!-- if logo is image enable this
+					</a></h1> -->
+				<!-- if logo is image enable this-->
 		<a class="navbar-brand" href="#index.html">
 			<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-		</a> -->
+		</a>
 				<button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
 					data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
 					aria-label="Toggle navigation">
