--- a/sign.html
+++ b/sign.html
@@ -32,6 +32,7 @@ Author URL: http://w3layouts.com
             border-top-left-radius: 10px;
             border-bottom-right-radius: 0px;
             box-shadow:0 3px 20px 0px rgba(0, 0, 0, 0.1);
+			font-weight: lighter;
 			
         }
 
@@ -209,13 +210,13 @@ Author URL: http://w3layouts.com
 <header id="site-header" class="fixed-top">
     <div class="container">
 		<nav class="navbar navbar-expand-lg navbar-dark stroke">
-			<h1> <a class="navbar-brand" href="index.html">
+			<!-- <h1> <a class="navbar-brand" href="index.html">
 					<span class="fa fa-heart"></span> <span class="sub-logo">Liv</span>Saverz
-				</a></h1>
-			<!-- if logo is image enable this   
+				</a></h1> -->
+			<!-- if logo is image enable this-->  
 	<a class="navbar-brand" href="#index.html">
 		<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-	</a> -->
+	</a>
 			<button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
 				data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
 				aria-label="Toggle navigation">
