--- a/about.html
+++ b/about.html
@@ -297,7 +297,7 @@
 		<div class="container py-lg-4">
 			<div class="title-content text-left mb-lg-5 mb-4">
 				<h6 class="sub-title">Our Team</h6>
-				<h3 class="hny-title">volunteers</h3>
+				<h3 class="hny-title">Recruiters & Trainers</h3>
 			</div>
 			<div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 				<div class="col-md-3 col-6">
@@ -406,7 +406,7 @@
 							<div class="row sub-columns">
 								<div class="col-lg-4 col-md-6 sub-one-left pr-lg-4">
 									<h2><a class="navbar-brand" href="index.html">
-											<span class="fa fa-heart"></span> <span class="sub-logo">Liv</span>Saverz
+											<span class="fa fa-heart"></span> <span class="sub-logo">Jane</span>Doe
 										</a></h2>
 									<!-- if logo is image enable this   
 										<a class="navbar-brand" href="#index.html">
@@ -469,19 +469,19 @@
 		
 								</div>
 								<div class="col-lg-4 col-md-6 sub-one-left">
-									<h6>Happy Faces</h6>
+									<h6></h6>
 									<div class="instagram-feeds">
-										<div class="b-img"> <a href="#url"><img src="assets/images/f1.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client1.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f2.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client2.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f3.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client3.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f4.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client4.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f5.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client5.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f6.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client6.jpg"
 													class="img-fluid" alt=""></a></div>
 									</div>
 								</div>
@@ -494,7 +494,7 @@
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 LivSaverz. All rights reserved</p>
+							<p>© 2020 Jane Doe All rights reserved</p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
