--- a/services.html
+++ b/services.html
@@ -280,7 +280,7 @@ Author URL: http://w3layouts.com
 			<div class="row w3-services-grids">
 				<div class="col-lg-4 col-md-6 causes-grid">
 					<div class="causes-grid-info">
-						<a href="blog-single.html"><img src="assets/images/ab1.jpg" class="img-fuild" alt=""></a>
+						<a href="blog-single.html"><img src="assets/images/Sev1.jpg" class="img-fuild" alt=""></a>
 						<a href="#" class="cause-title-wrap">
 							<h4 class="cause-title">Adult Care
 							</h4>
@@ -308,7 +308,7 @@ Author URL: http://w3layouts.com
 				</div>
 				<div class="col-lg-4 col-md-6 causes-grid">
 					<div class="causes-grid-info">
-						<a href="blog-single.html"><img src="assets/images/ab2.jpg" class="img-fuild" alt=""></a>
+						<a href="blog-single.html"><img src="assets/images/Sev2.jpg" class="img-fuild" alt=""></a>
 						<a href="#" class="cause-title-wrap">
 							<h4 class="cause-title">Nanny Services
 							</h4>
@@ -338,7 +338,7 @@ Author URL: http://w3layouts.com
 				</div>
 				<div class="col-lg-4 col-md-6 causes-grid">
 					<div class="causes-grid-info">
-						<a href="blog-single.html"><img src="assets/images/ab.jpg" class="img-fuild" alt=""></a>
+						<a href="blog-single.html"><img src="assets/images/Sev3.jpg" class="img-fuild" alt=""></a>
 						<a href="#" class="cause-title-wrap">
 							<h4 class="cause-title">House Keeping
 							</h4>
@@ -369,7 +369,7 @@ Author URL: http://w3layouts.com
 				</div>
 				<div class="col-lg-4 col-md-6 causes-grid">
 					<div class="causes-grid-info">
-						<a href="blog-single.html"><img src="assets/images/ab3.jpg" class="img-fuild" alt=""></a>
+						<a href="blog-single.html"><img src="assets/images/Sev4.jpg" class="img-fuild" alt=""></a>
 						<a href="#" class="cause-title-wrap">
 							<h4 class="cause-title">Recruitment & Training
 							</h4>
@@ -401,7 +401,7 @@ Author URL: http://w3layouts.com
 					<div class="causes-grid-info">
 						<a href="blog-single.html"><img src="assets/images/ab4.jpg" class="img-fuild" alt=""></a>
 						<a href="#" class="cause-title-wrap">
-							<h4 class="cause-title">Water Helps Poor
+							<h4 class="cause-title">More Services
 							</h4>
 						</a>
 						<p class="card-text mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit hic odio.
@@ -479,7 +479,7 @@ Author URL: http://w3layouts.com
 							<div class="row sub-columns">
 								<div class="col-lg-4 col-md-6 sub-one-left pr-lg-4">
 									<h2><a class="navbar-brand" href="index.html">
-											<span class="fa fa-heart"></span> <span class="sub-logo">Liv</span>Saverz
+											<span class="fa fa-heart"></span> <span class="sub-logo">Jane</span>Doe
 										</a></h2>
 									<!-- if logo is image enable this
 											<a class="navbar-brand" href="#index.html">
@@ -541,19 +541,19 @@ Author URL: http://w3layouts.com
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6 sub-one-left">
-									<h6>Happy Faces</h6>
+									<h6></h6>
 									<div class="instagram-feeds">
-										<div class="b-img"> <a href="#url"><img src="assets/images/f1.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client1.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f2.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client2.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f3.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client3.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f4.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client4.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f5.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client5.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f6.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client6.jpg"
 													class="img-fluid" alt=""></a></div>
 									</div>
 								</div>
@@ -566,7 +566,7 @@ Author URL: http://w3layouts.com
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 LivSaverz. All rights reserved</p>
+							<p>© 2020 Jane Doe. All rights reserved</p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
