--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@ Author URL: http://w3layouts.com
 						</div>
 						<p class="mt-3 mb-4 pr-lg-5">Hi there, We are available 24/7 by fax, e-mail or by phone. Drop us line so we can talk
 						  futher about that.</p>
-						<h6 class="mb-4"> For more info or inquiry about our products project, and pricing please feel free to get in touch with us.</h6>
+						<h6 class="mb-4"> For more info or inquiry about our bookings, services, and pricing please feel free to get in touch with us.</h6>
 					  </div>
 					  <div class="hours">
 						<h6 class="mt-4">Email:</h6>
@@ -157,7 +157,7 @@ Author URL: http://w3layouts.com
 							<div class="row sub-columns">
 								<div class="col-lg-4 col-md-6 sub-one-left pr-lg-4">
 									<h2><a class="navbar-brand" href="index.html">
-											<span class="fa fa-heart"></span> <span class="sub-logo">Liv</span>Saverz
+											<span class="fa fa-heart"></span> <span class="sub-logo">Jane</span>Doe
 										</a></h2>
 									<!-- if logo is image enable this   
 										<a class="navbar-brand" href="#index.html">
@@ -219,19 +219,19 @@ Author URL: http://w3layouts.com
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6 sub-one-left">
-									<h6>Happy Faces</h6>
+									<h6></h6>
 									<div class="instagram-feeds">
-										<div class="b-img"> <a href="#url"><img src="assets/images/f1.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client1.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f2.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client2.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f3.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client3.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f4.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client4.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f5.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client5.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f6.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client6.jpg"
 													class="img-fluid" alt=""></a></div>
 									</div>
 								</div>
@@ -244,7 +244,7 @@ Author URL: http://w3layouts.com
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 LivSaverz. All rights reserved</p>
+							<p>© 2020 Jane Doe. All rights reserved</p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
