--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ Author URL: http://w3layouts.com
 							<div class="item">
 								<div class="slider-info mt-lg-4 mt-3">
 									<div class="img-circle">
-										<img src="assets/images/f2.jpg" class="img-fluid rounded" alt="client image">
+										<img src="assets/images/Test1.jpg" class="img-fluid rounded" alt="client image">
 									</div>
 									<div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit
 										id
@@ -531,7 +531,7 @@ Author URL: http://w3layouts.com
 							<div class="item">
 								<div class="slider-info mt-lg-4 mt-3">
 									<div class="img-circle">
-										<img src="assets/images/f4.jpg" class="img-fluid rounded" alt="client image">
+										<img src="assets/images/Test2.jpg" class="img-fluid rounded" alt="client image">
 									</div>
 									<div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit
 										id
@@ -544,7 +544,7 @@ Author URL: http://w3layouts.com
 							<div class="item">
 								<div class="slider-info mt-lg-4 mt-3">
 									<div class="img-circle">
-										<img src="assets/images/f3.jpg" class="img-fluid rounded" alt="client image">
+										<img src="assets/images/Test3.jpg" class="img-fluid rounded" alt="client image">
 									</div>
 									<div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit
 										id
@@ -557,7 +557,7 @@ Author URL: http://w3layouts.com
 							<div class="item">
 								<div class="slider-info mt-lg-4 mt-3">
 									<div class="img-circle">
-										<img src="assets/images/f6.jpg" class="img-fluid rounded" alt="client image">
+										<img src="assets/images/Test4.jpg" class="img-fluid rounded" alt="client image">
 									</div>
 									<div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit
 										id
@@ -601,7 +601,7 @@ Author URL: http://w3layouts.com
 							<div class="row sub-columns">
 								<div class="col-lg-4 col-md-6 sub-one-left pr-lg-4">
 									<h2><a class="navbar-brand" href="index.html">
-											<span class="fa fa-heart"></span> <span class="sub-logo">Liv</span>Saverz
+											<span class="fa fa-heart"></span> <span class="sub-logo">Jane</span>Doe
 										</a></h2>
 									<!-- if logo is image enable this   
 										<a class="navbar-brand" href="#index.html">
@@ -663,19 +663,19 @@ Author URL: http://w3layouts.com
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6 sub-one-left">
-									<h6>Happy Faces</h6>
+									<h6></h6>
 									<div class="instagram-feeds">
-										<div class="b-img"> <a href="#url"><img src="assets/images/f1.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client1.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f2.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client2.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f3.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client3.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f4.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client4.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f5.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client5.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f6.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client6.jpg"
 													class="img-fluid" alt=""></a></div>
 									</div>
 								</div>
