--- a/sign.html
+++ b/sign.html
@@ -393,7 +393,7 @@ function toggleLogin(){
 							<div class="row sub-columns">
 								<div class="col-lg-4 col-md-6 sub-one-left pr-lg-4">
 									<h2><a class="navbar-brand" href="index.html">
-											<span class="fa fa-heart"></span> <span class="sub-logo">Liv</span>Saverz
+											<span class="fa fa-heart"></span> <span class="sub-logo">Jane</span>Doe
 										</a></h2>
 									<!-- if logo is image enable this   
 										<a class="navbar-brand" href="#index.html">
@@ -455,19 +455,19 @@ function toggleLogin(){
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6 sub-one-left">
-									<h6>Happy Faces</h6>
+									<h6>Meet your clients</h6>
 									<div class="instagram-feeds">
-										<div class="b-img"> <a href="#url"><img src="assets/images/f1.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client1.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f2.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client2.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f3.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client3.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f4.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client4.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f5.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client5.jpg"
 													class="img-fluid" alt=""></a></div>
-										<div class="b-img"> <a href="#url"><img src="assets/images/f6.jpg"
+										<div class="b-img"> <a href="#url"><img src="assets/images/client6.jpg"
 													class="img-fluid" alt=""></a></div>
 									</div>
 								</div>
@@ -480,7 +480,7 @@ function toggleLogin(){
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 LivSaverz. All rights reserved</p>
+							<p>© 2020 Jane Doe. All rights reserved</p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
