--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>LivSaverz a People & Society Category Bootstrap Responsive Website Template | About :: W3layouts
-	</title>
+	<title>Nanny Services</title>
 	<!-- Template CSS -->
 	<link rel="stylesheet" href="assets/css/style-starter.css">
 	<!-- Template CSS -->
