--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>LivSaverz a People & Society Category Bootstrap Responsive Website Template | Services :: W3layouts
+	<title>Nanny Services
 	</title>
 	<!-- Template CSS -->
 	<link rel="stylesheet" href="assets/css/style-starter.css">
@@ -122,7 +122,7 @@ Author URL: http://w3layouts.com
 }
 
 /* The Close Button */
-.wxzy_close {
+.wxyz_close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
@@ -355,8 +355,8 @@ Author URL: http://w3layouts.com
                                 </div>
                             </div>
 						</div>
-						<a href="#" id="YSizeChart" class="btn btn-style btn-primary mt-4">Read More</a>
-						<div id="YSizeChartModal" class="wxyz_modal">
+						<a href="#" id="XSizeChart" class="btn btn-style btn-primary mt-4">Read More</a>
+						<div id="XSizeChartModal" class="wxyz_modal">
 
 							<div class="wxyz_modal-content">
 							  <span class="wxyz_close">&times;</span>
@@ -659,30 +659,30 @@ Author URL: http://w3layouts.com
 			</script>
 			<script>
 				// Get the modal
-				var xyModal = document.getElementById('YSizeChartModal');
+			var xyModal = document.getElementById('XSizeChartModal');
 
-				// Get the button that opens the modal
-				var xyBtn = document.getElementById("YSizeChart");
+			// Get the button that opens the modal
+			var xyBtn = document.getElementById("XSizeChart");
 
-				// Get the <span> element that closes the modal
-				var xySpan = document.getElementsByClassName("wxyz_close")[0];
+			// Get the <span> element that closes the modal
+			var xySpan = document.getElementsByClassName("wxyz_close")[0];
 
-				// When the user clicks the button, open the modal 
-				xyBtn.onclick = function() {
-    				xyModal.style.display = "block";
+			// When the user clicks the button, open the modal 
+			xyBtn.onclick = function() {
+				xyModal.style.display = "block";
+			}
+
+			// When the user clicks on <span> (x), close the modal
+			xySpan.onclick = function() {
+				xyModal.style.display = "none";
+			}
+
+			// When the user clicks anywhere outside of the modal, close it
+			window.onclick = function(event) {
+				if (event.target == xyModal) {
+					xyModal.style.display = "none";
 				}
-
-				// When the user clicks on <span> (x), close the modal
-				xySpan.onclick = function() {
-    				xyModal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-    			if (event.target == xyModal) {
-        			xyModal.style.display = "none";
-    				}
-				}
+			}
 			</script>
 			<script>
 				// Get the modal
